// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render a info alert 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  exclusive={true}
  handlerTag={1}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#EFFCFF",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "borderTopLeftRadius": 5,
            "borderTopRightRadius": 5,
            "flexDirection": "row",
            "gap": 12,
            "justifyContent": "center",
            "paddingBottom": 12,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 12,
            "width": "100%",
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#5FDDFF",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "SafeIcons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            {
              "color": "#5FDDFF",
              "fontFamily": "DMSans-SemiBold",
              "fontSize": 16,
            }
          }
          suppressHighlighting={true}
        >
          Info alert
        </Text>
      </View>
    </View>
  </View>
</RNGestureHandlerButton>
`;

exports[`Alert should render a warning alert 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  exclusive={true}
  handlerTag={2}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#fff0e0",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "borderTopLeftRadius": 5,
            "borderTopRightRadius": 5,
            "flexDirection": "row",
            "gap": 12,
            "justifyContent": "center",
            "paddingBottom": 12,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 12,
            "width": "100%",
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FF8C00",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "SafeIcons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            {
              "color": "#FF8C00",
              "fontFamily": "DMSans-SemiBold",
              "fontSize": 16,
            }
          }
          suppressHighlighting={true}
        >
          Warning alert
        </Text>
      </View>
    </View>
  </View>
</RNGestureHandlerButton>
`;

exports[`Alert should render an alert with a name icon 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  exclusive={true}
  handlerTag={6}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#49191F",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "borderTopLeftRadius": 5,
            "borderTopRightRadius": 5,
            "flexDirection": "row",
            "gap": 12,
            "justifyContent": "center",
            "paddingBottom": 12,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 12,
            "width": "100%",
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FF5F72",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "SafeIcons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            {
              "color": "#FF5F72",
              "fontFamily": "DMSans-SemiBold",
              "fontSize": 16,
            }
          }
          suppressHighlighting={true}
        >
          Error alert
        </Text>
      </View>
    </View>
  </View>
</RNGestureHandlerButton>
`;

exports[`Alert should render an alert with an end icon 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  exclusive={true}
  handlerTag={5}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#49191F",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "borderTopLeftRadius": 5,
            "borderTopRightRadius": 5,
            "flexDirection": "row",
            "gap": 12,
            "justifyContent": "center",
            "paddingBottom": 12,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 12,
            "width": "100%",
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FF5F72",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "SafeIcons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            {
              "color": "#FF5F72",
              "fontFamily": "DMSans-SemiBold",
              "fontSize": 16,
            }
          }
          suppressHighlighting={true}
        >
          Error alert
        </Text>
        <View>
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FF5F72",
                  "fontSize": 24,
                },
                undefined,
                {
                  "fontFamily": "SafeIcons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNGestureHandlerButton>
`;

exports[`Alert should render an alert with start icon 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  exclusive={true}
  handlerTag={4}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#49191F",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "borderTopLeftRadius": 5,
            "borderTopRightRadius": 5,
            "flexDirection": "row",
            "gap": 12,
            "justifyContent": "center",
            "paddingBottom": 12,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 12,
            "width": "100%",
          }
        }
      >
        <View>
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FF5F72",
                  "fontSize": 24,
                },
                undefined,
                {
                  "fontFamily": "SafeIcons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          style={
            {
              "color": "#FF5F72",
              "fontFamily": "DMSans-SemiBold",
              "fontSize": 16,
            }
          }
          suppressHighlighting={true}
        >
          Error alert
        </Text>
      </View>
    </View>
  </View>
</RNGestureHandlerButton>
`;

exports[`Alert should render an error alert 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  exclusive={true}
  handlerTag={3}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#49191F",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "borderTopLeftRadius": 5,
            "borderTopRightRadius": 5,
            "flexDirection": "row",
            "gap": 12,
            "justifyContent": "center",
            "paddingBottom": 12,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 12,
            "width": "100%",
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FF5F72",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "SafeIcons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            {
              "color": "#FF5F72",
              "fontFamily": "DMSans-SemiBold",
              "fontSize": 16,
            }
          }
          suppressHighlighting={true}
        >
          Error alert
        </Text>
      </View>
    </View>
  </View>
</RNGestureHandlerButton>
`;
